--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@react-oauth/google": "^0.12.2",
+    "axios": "^1.9.0",
     "crypto-js": "^4.2.0",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
