--- a/package.json
+++ b/package.json
@@ -13,15 +13,12 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@react-oauth/google": "^0.12.2",
-    "axios": "^1.9.0",
-    "crypto-js": "^4.2.0",
-    "js-cookie": "^3.0.5",
-    "jwt-decode": "^4.0.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "recharts": "^2.15.3",
-    "secure-web-storage": "^1.0.2"
+    "react-redux": "^9.2.0",
+    "recharts": "^2.15.3"
   }
 }
